# dfiler

./: .bazelrc  .clang-format  .dockerignore  .gitignore  .goreleaser.yaml  .kazelcfg.json  .travis.yml  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.debug  LICENSE  Makefile  README.md  WORKSPACE  conanfile.txt  go.mod  go.sum  rustfmt.toml
.conan/: remotes.json
.github/workflows/: ci.yaml  release.yaml
cmake/: CodeCov.cmake  CodeCoverage.cmake  GoogleTest.cmake  SetupCxxFlags.cmake
cmd/dfiler/: BUILD.bazel  main.go
dfiler/: CMakeLists.txt
dfiler/src/: main.cpp
dfiler/test/: CMakeLists.txt  test_test.cpp
dfiler_lib/: CMakeLists.txt
dfiler_lib/include/dfiler/: action.h  action_set.h  dfiler.h  image.h
dfiler_lib/include/dfiler/cli/: command.h  options.h
dfiler_lib/src/: action_set.cpp  image.cpp  symlink_action.cpp  symlink_action.h
dfiler_lib/src/cli/: command.cpp  help_command.cpp  help_command.h  options.cpp  symlink_command.cpp  symlink_command.h
dfiler_lib/src/io/: symlink.h
dfiler_lib/test/: CMakeLists.txt
dfiler_lib/test/io/: test_symlink.cpp
dfiler_lib/test/src/: test_action_set.cpp  test_image.cpp  test_symlink_action.cpp
dfiler_lib/test/src/cli/: test_command.cpp  test_help_command.cpp  test_options.cpp  test_symlink_command.cpp
dfiler_lib/test/src/utils/: args.h  image_test.h  shell.h
docker/: Dockerfile.jessie  Dockerfile.stretch
fixture/: README.md
fixture/source/: agignore  dfiler.yml
pkg/cli/: BUILD.bazel  cli.go  helper_test.go  link.go  link_test.go  options.go  version.go  version_test.go
pkg/cli/testdata/: TestLink.golden  TestLinkNoFiles.golden  TestLinkUndo.golden  TestVersion.golden
pkg/system/: BUILD.bazel  fs.go  fs_test.go
pkg/system/testdata/: target.txt
pkg/tasks/: BUILD.bazel  run.go  run_test.go  symlink.go  symlink_test.go  task.go  task_test.go
pkg/testutil/: BUILD.bazel  golden.go
pkg/ui/: BUILD.bazel  frame.go  frame_test.go  printer.go  terminal.go
pkg/ui/testdata/: TestWithFrame.nested.golden  TestWithFrame.single.golden
script/: docker-test
src/: CMakeLists.txt  commands.rs  config.rs  context.rs  lib.rs  symlink.rs
src/io/: symlink.cpp
test/: CMakeLists.txt
test/io/: test_symlink.cpp
test_data/: Dockerfile
test_data/image/: .gitignore
testdata/dotfiles/: .settings
testdata/dotfiles/sub/sub/: test.txt
tests/: symlinks.rs
