[package]
name        = "dfiler"
version     = "0.1.0"
authors     = ["David Muto (pseudomuto) <david.muto@gmail.com>"]
description = "A tool for managing dotfiles and packages for 'nix systems."

[dependencies]
clap         = "~2.27.0"
error-chain  = "~0.11"
serde        = "~1.0"
serde_derive = "~1.0"
serde_yaml   = "~0.7"
