load("@bazel_gomock//:gomock.bzl", "gomock")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cli.go",
        "link.go",
        "options.go",
        "version.go",
    ],
    importpath = "github.com/pseudomuto/dfiler/pkg/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/system:go_default_library",
        "//pkg/tasks:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

gomock(
    name = "mock_fs",
    out = "mock_fs_test.go",
    interfaces = ["FS"],
    library = "//pkg/system:go_default_library",
    package = "cli_test",
)

go_test(
    name = "go_default_test",
    srcs = [
        "helper_test.go",
        "link_test.go",
        "mock_fs_test.go",
        "version_test.go",
    ],
    data = ["//testdata:all-srcs"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
