load("@bazel_gomock//:gomock.bzl", "gomock")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "run.go",
        "symlink.go",
        "task.go",
    ],
    importpath = "github.com/pseudomuto/dfiler/pkg/tasks",
    visibility = ["//visibility:public"],
    deps = ["//pkg/system:go_default_library"],
)

gomock(
    name = "mock_fs",
    out = "mock_fs_test.go",
    interfaces = ["FS"],
    library = "//pkg/system:go_default_library",
    package = "tasks_test",
)

go_test(
    name = "go_default_test",
    srcs = [
        "mock_fs_test.go",
        "run_test.go",
        "symlink_test.go",
        "task_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
